cabal-version:          2.4
name:                   intervalops
version:                0.1.0.0

extra-source-files:     CHANGELOG.md

library
    exposed-modules:    IntervalOps

    build-depends:      base ^>=4.14.3.0
    hs-source-dirs:     src
    default-language:   Haskell2010

executable intervalops
    main-is:            Main.hs

    build-depends:
        base ^>=4.14.3.0,
        intervalops

    hs-source-dirs:     app
    default-language:   Haskell2010

Test-Suite intervalops-testsuite
    type:               exitcode-stdio-1.0
    main-is:            TestSuite.hs
    other-modules:      IntervalOps
    build-depends:      base,HUnit
    hs-source-dirs:     src
    default-language:   Haskell2010
